# CampaignAgent

./: .env.example  .gitignore  README.md  app.py  graph.py  models.py  pyproject.toml  sample_brief.md
.claude/: launch.json  settings.local.json
agents/: blog_writer.py  campaign_planner.py  email_writer.py  output_assembler.py  social_writer.py  strategy_parser.py
brand/: blog_style_guide.md  email_templates.md  link_targets.json  social_guidelines.md  utm_conventions.json  voice_guide.md
utils/: brand.py  tracing.py  utm.py
